Implement login auth gate revamp
